# IARA_V3

./: README.md  pyproject.toml  schema.py
app/: main.py
app/components/: chat_interface.py  chat_interface_new.py  document_upload.py  document_upload_new.py  user_chat_interface.py
attached_assets/: Pasted--IARA-CHAT-V2-Vers-o-avan-ada-da-IARA-com-arquitetura-de-agentes-e-sistema-modular-Sobre-o-P-1745508453740.txt
core/agents/: agent_factory.py  agent_types.py  base_agent.py  dialogue_agent.py  document_processing_agent.py  information_retrieval_agent.py  llm_agent.py  orchestrator_agent.py  security_agent.py
core/document_processing/: embeddings.py  loaders.py  splitters.py
core/models/: base.py  llm.py  openai_models.py
core/rag/: chains.py  prompts.py  retriever.py
infrastructure/database/: __init__.py  connection.py  db_init.py  models.py  repository.py
infrastructure/messaging/: message_broker.py
infrastructure/state/: state_manager.py
