[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "faiss-cpu>=1.10.0",
    "numpy>=2.2.5",
    "openai>=1.76.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
]
